[package]
name = "wasme"
description = "A Session Manager Extension written in Web Assembly with Rust."
homepage = "https://github.com/UserIsntAvailable/wasme"
version = "0.1.0"
edition = "2021"

[package.metadata.manifest_json]
manifest_version = 2
permissions = ["storage"]

# TODO: include `icons`.

content_scripts = [{ "matches" = ["*://github.com/*"], "js" = ["wasme.js"] }]
# TODO: I could improve `build.rs` to add this automatically.
web_accessible_resources = ["wasme_bg.wasm"]

[lib]
path = "./scripts/.build-mark.rs"
crate-type = ["cdylib"]

[[bin]]
name = "wasme-ext"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
rgb = { version = "0.8.34", features = ["serde"] }
serde = "1.0.150"
serde_json = "1.0.89"
url = { version = "2.3.1", features = ["serde"] }
yew = { version = "0.20.0", features = ["csr"] }

[build-dependencies]
eyre = "0.6.8"
once_cell = "1.16.0"
serde_json = { version = "1.0.89", features = ["preserve_order"] }
toml = { version = "0.5.9", features = ["preserve_order"] }
wasm-pack = "0.10.3"
